--- a/SaraiManagement/Views/Donatario/List.cshtml
+++ b/SaraiManagement/Views/Donatario/List.cshtml
@@ -21,8 +21,10 @@
      page-class-selected="btn-primary" class="btn-group pull-right m-1">
 </div>
 
-<div>
-    <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success" role="button" aria-pressed="true">Voltar </a>
+<hr />
+<div class="centraliza;">
+    <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success botao" role="button" aria-pressed="true">Voltar </a>
+    <a asp-controller="Donatario" asp-action="Create" class="btn btn-info botao">Cadastrar Novo</a>
 </div>
 
 
