--- a/SaraiManagement/Views/Estoque/Edit.cshtml
+++ b/SaraiManagement/Views/Estoque/Edit.cshtml
@@ -20,7 +20,7 @@
     }
 </style>
 
-<h4>Estoque</h4>
+<h1 style="text-align: center;">Estoque</h1>
 <hr />
 <div class="row centraliza">
     <div class="col-md-4">
