--- a/SaraiManagement/Views/Estoque/List.cshtml
+++ b/SaraiManagement/Views/Estoque/List.cshtml
@@ -51,5 +51,6 @@
     </tbody>
 </table>
 <p>
+    <a asp-controller="TelaInicial" asp-action="Index" class="btn btn-success botao" role="button" aria-pressed="true">Voltar </a>
     <a class="btn btn-primary" asp-action="Create">Adicionar Novo Item</a>
 </p>
