--- a/SaraiManagement/Views/Movimentacao/Consultar.cshtml
+++ b/SaraiManagement/Views/Movimentacao/Consultar.cshtml
@@ -24,7 +24,7 @@
 <h1 style="text-align: center">Detalhes da Movimentação</h1>
 <hr />
 
-<div class="centraliza">
+<div style="padding: 0 0 0 35%;">
 
     <dl class="row">
         <dt class="col-sm-2">
