--- a/SaraiManagement/Views/TelaInicial/Sobre.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Sobre.cshtml
@@ -5,14 +5,14 @@
 
 <div>
     
-    <div class="centraliza" style="margin: 50px 0">
+    <div class="container-fluid d-flex flex-wrap centraliza" style="margin: 50px 0">
 
         <div class="" style="margin: 20px">
             <h1 class="display-4">SARAI MANAGEMENT</h1>
         </div>
 
         <div>
-            <div class="card" style="width: 30rem;">
+            <div class="card" style="width: 25rem;">
                 <img class="card-img-top" src="~/img/Logo.jpg" alt="Imagem de capa do card">
             </div>
         </div>
@@ -25,7 +25,7 @@
         <h1 class="display-4">Sobre o Sarai Cazita</h1>
     </div>
 
-    <div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center; ">
+    <div class="container-fluid d-flex flex-wrap centraliza" style="background-color: gray;">
 
         <div style="width: 80%; text-align: justify;">
             <p>
