--- a/SaraiManagement/Views/Aluno/Edit.cshtml
+++ b/SaraiManagement/Views/Aluno/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Editar</h1>
+<h1 style="text-align: center;">Editar</h1>
 
 <div class="row">
 
