--- a/SaraiManagement/Views/Caixa/Create.cshtml
+++ b/SaraiManagement/Views/Caixa/Create.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cadastrar</h1>
+<h1 style="text-align: center;">Cadastrar</h1>
 
 <hr />
-<div class="row">
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
