--- a/SaraiManagement/Views/TelaInicial/Sobre.cshtml
+++ b/SaraiManagement/Views/TelaInicial/Sobre.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    
+
     <div class="container-fluid d-flex flex-wrap centraliza" style="margin: 50px 0">
 
         <div class="" style="margin: 20px">
@@ -21,27 +21,62 @@
 
     <hr />
 
-    <div class="text-center" style="margin: 20px 0">
+    <div class="text-center" style="margin: 20px 0; ">
         <h1 class="display-4">Sobre o Sarai Cazita</h1>
     </div>
 
-    <div class="container-fluid d-flex flex-wrap centraliza" style="background-color: gray;">
+    <div class="container-fluid d-flex flex-wrap centraliza">
 
-        <div style="width: 80%; text-align: justify;">
+        <div style="width: 80%; text-align: justify; font-size: 25px">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae sagittis erat. Vivamus congue viverra tellus eget scelerisque. Vestibulum in augue elit. Fusce placerat varius iaculis. Duis porttitor tellus nisi, id condimentum nulla ultrices vel. Suspendisse quam metus, sollicitudin et urna vel, varius posuere leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum arcu at felis condimentum tincidunt. Cras augue sapien, dictum eu ipsum ac, luctus lacinia metus. Vestibulum in urna enim. Proin nec justo fringilla, malesuada massa nec, tempor purus.
+                O Sarai Cazita é uma instituição que atua no auxílio educacional de crianças e adolescentes de 5 a 16 anos. O projeto funciona como uma jornada ampliada onde a criança/adolescente possa frequentar meio período em sua escola curricular e meio período na instituição Sarai. A instituição chamada de lar escola é constituída por 95 estudantes no momento, prestando atendimento com um foco maior na saúde emocional de seus integrantes.
+            </p>
+
+            <h1 style="text-align: center;">Sobre as Doações</h1>
+            <p>
+                O Sarai trabalha com qualquer tipo de doação, desde alimentos, roupas, móveis, contribuições monetárias a qualquer momento do ano. Recebe doações de pessoas físicas que procuram ajudar mensalmente ou não.
             </p>
             <p>
-                Aliquam nec tortor nec nisl varius blandit. Maecenas rutrum faucibus dui id ornare. Maecenas tempus felis sed sollicitudin posuere. Vivamus et posuere orci, vel elementum turpis. Donec accumsan gravida nisi sed interdum. Fusce laoreet mollis augue, sit amet consectetur nisi imperdiet eget. Morbi sagittis ultricies lobortis. Proin dictum leo eget massa finibus aliquam. Vivamus interdum neque quis mi aliquet, vel viverra mi ultrices. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris viverra, urna vehicula vestibulum elementum, enim risus porta arcu, sed lacinia est diam at metus. Maecenas tristique nibh eu risus pellentesque, congue porttitor ipsum finibus. Cras tempor, lorem sit amet ullamcorper imperdiet, ligula nibh pharetra tortor, sit amet dapibus felis ante nec tellus. Nam et condimentum dolor. Phasellus enim metus, auctor ut dapibus efficitur, mattis vitae ante. Nulla sagittis ex accumsan libero eleifend congue.
+                As doações são disponibilizadas às famílias que compõem o projeto, sendo distribuída em conformidade com a situação na qual a família se encontra, ressaltando que todas as entregas são realizadas pela instituição.
             </p>
-            <p>
-                Sed sodales, mauris a tempus mattis, sapien mauris vestibulum erat, a interdum massa libero non odio. Integer felis magna, consequat vel lacus vitae, elementum placerat enim. Donec sed sagittis sapien, at lobortis neque. Donec ullamcorper lectus sed luctus placerat. Aliquam lobortis ullamcorper justo. Fusce consequat ligula nisl, posuere volutpat mauris sagittis eget. Aenean erat magna, tristique at vulputate quis, scelerisque nec ante.
-            </p>
-            <p>
-                Nullam convallis odio metus, ut malesuada magna semper vitae. Vestibulum vitae semper orci. Sed lacinia nisl vitae ornare ultricies. Sed tempor nunc quis felis tempor, vitae facilisis mauris efficitur. Aliquam semper semper mi, at gravida tellus. Sed nec leo purus. Mauris sodales, odio vel egestas placerat, erat risus maximus eros, in facilisis quam orci et elit. Praesent consequat ipsum quis vehicula gravida. Pellentesque ut auctor nulla. Nunc vehicula tellus vitae magna fermentum, pulvinar viverra libero tempor. Morbi egestas a ex et egestas. Duis odio nisi, tempus non eros sed, iaculis euismod arcu.
-            </p>
+
         </div>
 
     </div>
 
+    <hr />
+
+    <div class="text-center" style="margin: 20px 0;">
+        <h1 class="display-4">Sobre os Desenvolvedores</h1>
+    </div>
+
+    <div class="container-fluid d-flex flex-wrap centraliza">
+        <div class="card" style="width: 18rem; margin: 10px 20px 10px 20px; border: 5px solid black; height: 25%">
+
+            <img class="card-img-top" src="~/img/CadastroAluno.png" alt="Imagem de capa do card">
+            <h5 class="card-title" style="text-align: center;">Davi Nascimento</h5>
+
+        </div>
+
+        <div class="card" style="width: 18rem; margin: 10px 20px 10px 20px; border: 5px solid black; height: 25%">
+
+            <img class="card-img-top" src="~/img/CadastroAluno.png" alt="Imagem de capa do card">
+            <h5 class="card-title" style="text-align: center;">Eliano Cordeiro</h5>
+
+        </div>
+
+        <div class="card" style="width: 18rem; margin: 10px 20px 10px 20px; border: 5px solid black; height: 25%">
+
+            <img class="card-img-top" src="~/img/CadastroAluno.png" alt="Imagem de capa do card">
+            <h5 class="card-title" style="text-align: center;">João Paulo Carvalho</h5>
+
+        </div>
+
+        <div class="card" style="width: 18rem; margin: 10px 20px 10px 20px; border: 5px solid black; height: 25%">
+
+            <img class="card-img-top" src="~/img/CadastroAluno.png" alt="Imagem de capa do card">
+            <h5 class="card-title" style="text-align: center;">Matheus Fidelis</h5>
+
+        </div>
+    </div>
 </div>
