--- a/SaraiManagement/Views/ItemDoado/Create.cshtml
+++ b/SaraiManagement/Views/ItemDoado/Create.cshtml
@@ -31,7 +31,7 @@
             <div class="form-group">
                 <input type="submit" value="Finalizar" class="btn btn-success">
                 <input type="submit" value="Novo item" class="btn btn-primary" asp-route-x="Sim" />
-                <input type="submit" value="Vizualizar Itens" class="btn btn-primary" asp-route-x="Visualizar">
+                <input type="submit" value="Visualizar Itens" class="btn btn-primary" asp-route-x="Visualizar">
             </div>
 
         </form>
