--- a/SaraiManagement/Views/Aluno/Edit.cshtml
+++ b/SaraiManagement/Views/Aluno/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h1 style="text-align: center;">Editar</h1>
 
-<div class="row">
+<div class="container-fluid d-flex flex-wrap" style="display: flex; justify-content: center; align-items: center;">
 
     <div class="col-md-4">
         <form asp-action="Edit">
