--- a/SaraiManagement/Views/Aluno/Edit.cshtml
+++ b/SaraiManagement/Views/Aluno/Edit.cshtml
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Ano" class="control-label"></label>
-                <select asp-for="Ano" class="form-control"></select>
+                <select asp-for="@Model.Ano" class="form-control" asp-items=" Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Ano>()"></select>
                 <span asp-validation-for="Ano" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -56,7 +56,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Periodo" class="control-label"></label>
-                <input asp-for="Periodo" class="form-control" />
+                <select asp-for="@Model.Periodo" class="form-control" asp-items="Html.GetEnumSelectList<SaraiManagement.Models.Enuns.Periodo>()"></select>
                 <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
