--- a/SaraiManagement/Views/Doacao/Create.cshtml
+++ b/SaraiManagement/Views/Doacao/Create.cshtml
@@ -48,7 +48,7 @@
 
 
 
-            <div id="test" class="hidden form-group" style="display:none">
+            <div id="test" class="hidden form-group container-fluid d-flex flex-wrap" style="display:none">
                 <div>
                     @*<label asp-for="Valor" class="control-label"></label>*@
                     <label class="fonte">Valor: </label>
